--- a/Spark_DataFrames/Missing_Data.ipynb
+++ b/Spark_DataFrames/Missing_Data.ipynb
@@ -28,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
@@ -41,9 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = spark.read.csv(\"ContainsNull.csv\",header=True,inferSchema=True)"
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -315,6 +311,128 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method fill in module pyspark.sql.dataframe:\n",
+      "\n",
+      "fill(value, subset=None) method of pyspark.sql.dataframe.DataFrameNaFunctions instance\n",
+      "    Replace null values, alias for ``na.fill()``.\n",
+      "    :func:`DataFrame.fillna` and :func:`DataFrameNaFunctions.fill` are aliases of each other.\n",
+      "    \n",
+      "    :param value: int, long, float, string, bool or dict.\n",
+      "        Value to replace null values with.\n",
+      "        If the value is a dict, then `subset` is ignored and `value` must be a mapping\n",
+      "        from column name (string) to replacement value. The replacement value must be\n",
+      "        an int, long, float, boolean, or string.\n",
+      "    :param subset: optional list of column names to consider.\n",
+      "        Columns specified in subset that do not have matching data type are ignored.\n",
+      "        For example, if `value` is a string, and subset contains a non-string column,\n",
+      "        then the non-string column is simply ignored.\n",
+      "    \n",
+      "    >>> df4.na.fill(50).show()\n",
+      "    +---+------+-----+\n",
+      "    |age|height| name|\n",
+      "    +---+------+-----+\n",
+      "    | 10|    80|Alice|\n",
+      "    |  5|    50|  Bob|\n",
+      "    | 50|    50|  Tom|\n",
+      "    | 50|    50| null|\n",
+      "    +---+------+-----+\n",
+      "    \n",
+      "    >>> df5.na.fill(False).show()\n",
+      "    +----+-------+-----+\n",
+      "    | age|   name|  spy|\n",
+      "    +----+-------+-----+\n",
+      "    |  10|  Alice|false|\n",
+      "    |   5|    Bob|false|\n",
+      "    |null|Mallory| true|\n",
+      "    +----+-------+-----+\n",
+      "    \n",
+      "    >>> df4.na.fill({'age': 50, 'name': 'unknown'}).show()\n",
+      "    +---+------+-------+\n",
+      "    |age|height|   name|\n",
+      "    +---+------+-------+\n",
+      "    | 10|    80|  Alice|\n",
+      "    |  5|  null|    Bob|\n",
+      "    | 50|  null|    Tom|\n",
+      "    | 50|  null|unknown|\n",
+      "    +---+------+-------+\n",
+      "    \n",
+      "    .. versionadded:: 1.3.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(df.na.fill)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+-----+\n",
+      "|  Id|   Name|Sales|\n",
+      "+----+-------+-----+\n",
+      "|emp1|   John|  0.0|\n",
+      "|emp2|No Name|  0.0|\n",
+      "|emp3|No Name|345.0|\n",
+      "|emp4|  Cindy|456.0|\n",
+      "+----+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.na.fill({\"Name\":\"No Name\",\"sales\":0}).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+-----+\n",
+      "|  Id|   Name|Sales|\n",
+      "+----+-------+-----+\n",
+      "|emp1|   John|  0.0|\n",
+      "|emp2|No Name|  0.0|\n",
+      "|emp3|No Name|345.0|\n",
+      "|emp4|  Cindy|456.0|\n",
+      "+----+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.na.fill({\"Name\":\"No Name\",\"sales\":0}).show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +450,7 @@
        "400.5"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,10 +465,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row(avg(Sales)=400.5)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_val[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "mean_sales = mean_val[0][0]"
@@ -358,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +519,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----+-----+\n",
+      "|  Id| Name|Sales|\n",
+      "+----+-----+-----+\n",
+      "|emp1| John|400.5|\n",
+      "|emp2| null|400.5|\n",
+      "|emp3| null|345.0|\n",
+      "|emp4|Cindy|456.0|\n",
+      "+----+-----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.na.fill({\"Sales\":mean_sales}).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
